<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/message"
        android:title="@string/chat_title"/>

    <item
        android:id="@+id/navigation_properties"
        android:icon="@drawable/lease"
        android:title="@string/title_properties"/>

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/heart"
        android:title="@string/title_saved"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />


</menu>